--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "vite --host 0.0.0.0 --port 5000 --strictPort",
+    "dev": "vite --host 0.0.0.0 --port 3000",
     "build": "vite build",
-    "preview": "vite preview --host 0.0.0.0 --port 5000 --strictPort"
-  },
+    "preview": "vite preview --host 0.0.0.0 --port 3000"
+  }
+
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
